test/errors/offsets_error/zs/bitwise_or_operator_error.zs
package bitwise_or_operator_error;

struct BitwiseOrOperatorError
{
    uint32 offset;
offset | 0xf:
    string field;
};
